--- a/src/net/WebApp/wwwroot/index.html
+++ b/src/net/WebApp/wwwroot/index.html
@@ -20,7 +20,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="imgs/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon-16x16.png">
-    <link rel="manifest" href="imgs/manifest.json">
+    <link rel="manifest" href="manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="imgs/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
@@ -33,7 +33,7 @@
                 <div class="container">
                     <div class="row text-center">
                         <div class="col-md-12">
-                            <img src=imgs/logo.png height="94" width="773" alt="Memealyzer" />
+                            <img src=imgs/logo.png height="94" width="773" alt="Memealyzer" class="img-fluid" />
                         </div>
                         <div class="col-md-12">
                             <div class="spinner-grow" role="status">
