--- a/src/net/WebApp/wwwroot/index.html
+++ b/src/net/WebApp/wwwroot/index.html
@@ -20,7 +20,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="imgs/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon-16x16.png">
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="imgs/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
